Refactor Invoice services to use CommonSettingsCache instead of ConfigurationService